rename pet to todo
